--- a/index.html
+++ b/index.html
@@ -301,7 +301,20 @@
 
   <section id="projects">
     <h2 class="gradient-header">Projects</h2>
-    <p>Coming soon!</p>
+  <div class="cert-grid">
+    <div class="cert-card">
+      <img src="icons/github.svg" alt="GitHub Logo" />
+      <div>
+        <h3 style="color: #90caf9;">Transit Product Improvement Case Study</h3>
+        <p>
+          A detailed case study exploring UX, pain points, and solutions in transit product workflows.
+        </p>
+        <a href="https://github.com/praneethk6795/Transit_Product_Improvement_Case_Study" target="_blank">
+          View on GitHub →
+        </a>
+      </div>
+    </div>
+  </div>
   </section>
 
   <section id="contact">
