--- a/index.html
+++ b/index.html
@@ -300,22 +300,34 @@
   </section>
 
   <section id="projects">
-    <h2 class="gradient-header">Projects</h2>
-  <div class="cert-grid">
-    <div class="cert-card">
-      <img src="icons/github.svg" alt="GitHub Logo" />
-      <div>
-        <h3 style="color: #90caf9;">Transit Product Improvement Case Study</h3>
-        <p>
-          A detailed case study exploring UX, pain points, and solutions in transit product workflows.
-        </p>
-        <a href="https://github.com/praneethk6795/Transit_Product_Improvement_Case_Study" target="_blank">
-          View on GitHub →
+  <h2 class="gradient-header">Projects</h2>
+
+  <div class="skills-grid">
+    <div class="skill-group">
+      <img src="icons/Transit_App.png" alt="Transit App" style="width: 100%; border-radius: 1rem; box-shadow: 0 0 12px rgba(0, 0, 0, 0.4);" />
+
+      <h3 style="text-align: center; margin-top: 1rem;">Transit Product Improvement Case Study</h3>
+
+      <p style="text-align: center;">
+        A UX-focused case study improving the transit experience through research, flow redesign, and stakeholder insights.
+      </p>
+
+      <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 8px; margin: 10px 0;">
+        <span class="tag">Figma</span>
+        <span class="tag">User Research</span>
+        <span class="tag">Journey Mapping</span>
+        <span class="tag">UX/UI</span>
+        <span class="tag">Product Thinking</span>
+      </div>
+
+      <div style="text-align: center; margin-top: 1rem;">
+        <a href="https://github.com/praneethk6795/Transit_Product_Improvement_Case_Study" target="_blank" class="btn primary-btn">
+          View Project
         </a>
       </div>
     </div>
   </div>
-  </section>
+</section>
 
   <section id="contact">
     <h2 class="gradient-header">Contact Me</h2>
