project addition fixes

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
   </section>
 
   <section id="skills">
-    <h2 class="gradient-header">Skills & Expertise</h2>
+  <h2 class="gradient-header">Skills & Expertise</h2>
   <p class="skills-intro">
     A comprehensive skill set spanning product management, agile methodologies, business analysis, and technical implementation
   </p>
@@ -243,7 +243,7 @@
   <div class="skills-grid">
     <div class="skill-group">
       <div class="skill-title">
-        <img src="icons/target.svg" alt="Product Management Icon" class="skill-icon">
+        <img src="icons/target.svg" alt="Product Management Icon" class="skill-icon" />
         <h3>Product Management</h3>
       </div>
       <ul>
@@ -257,7 +257,7 @@
 
     <div class="skill-group">
       <div class="skill-title">
-        <img src="icons/refresh-cw.svg" alt="Agile Icon" class="skill-icon">
+        <img src="icons/refresh-cw.svg" alt="Agile Icon" class="skill-icon" />
         <h3>Agile & Scrum</h3>
       </div>
       <ul>
@@ -271,7 +271,7 @@
 
     <div class="skill-group">
       <div class="skill-title">
-        <img src="icons/bar-chart-2.svg" alt="Business Analysis Icon" class="skill-icon">
+        <img src="icons/bar-chart-2.svg" alt="Business Analysis Icon" class="skill-icon" />
         <h3>Business Analysis</h3>
       </div>
       <ul>
@@ -285,7 +285,7 @@
 
     <div class="skill-group">
       <div class="skill-title">
-        <img src="icons/code.svg" alt="Technical Skills Icon" class="skill-icon">
+        <img src="icons/code.svg" alt="Technical Skills Icon" class="skill-icon" />
         <h3>Technical Skills</h3>
       </div>
       <ul>
@@ -297,24 +297,24 @@
       </ul>
     </div>
   </div>
-  </section>
+</section>
 
-  <section id="projects">
+<section id="projects">
   <h2 class="gradient-header">Projects</h2>
 
   <div class="skills-grid">
-    <div class="skill-group">
-      <img src="icons/Transit_App.png" alt="Transit App" style="width: 100%; border-radius: 1rem; box-shadow: 0 0 8px rgba(0, 0, 0, 0.2); margin-bottom: 1rem;" />
+    <div class="skill-group project-card">
+      <img src="icons/Transit_App.png" alt="Transit App" class="project-image" />
 
-      <h3 style="text-align: center; font-size: 1.2rem; margin-bottom: 0.5rem; color: #ffffff; font-weight: 600;">
+      <h3 class="project-title">
         Transit Product Improvement Case Study
       </h3>
 
-      <p style="text-align: center; font-size: 0.9rem; color: #cccccc; line-height: 1.4;">
+      <p class="project-description">
         A UX-focused case study improving the transit experience through research, flow redesign, and stakeholder insights.
       </p>
 
-      <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 8px; margin: 12px 0;">
+      <div class="project-tags">
         <span class="tag">Figma</span>
         <span class="tag">User Research</span>
         <span class="tag">Journey Mapping</span>
@@ -322,7 +322,7 @@
         <span class="tag">Product Thinking</span>
       </div>
 
-      <div style="text-align: center; margin-top: 10px;">
+      <div class="project-link">
         <a href="https://github.com/praneethk6795/Transit_Product_Improvement_Case_Study" target="_blank" class="btn primary-btn">
           View Project
         </a>
