--- a/index.html
+++ b/index.html
@@ -16,16 +16,17 @@
     <div class="hamburger" id="hamburger">☰</div>
 
     <ul class="nav-links" id="navLinks">
-      <span class="close-btn" id="closeBtn">×</span>
-      <li><a href="#home">Home</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#experience">Experience</a></li>
-      <li><a href="#education">Education</a></li>
-      <li><a href="#certifications">Certifications</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#skills">Skills</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
+  <span class="close-btn" id="closeBtn">×</span>
+  <li><a href="#home">Home</a></li>
+  <li><a href="#about">About</a></li>
+  <li><a href="#skills">Skills</a></li>          <!-- moved up -->
+  <li><a href="#certifications">Certifications</a></li>  <!-- moved up -->
+  <li><a href="#experience">Experience</a></li>  <!-- moved down -->
+  <li><a href="#projects">Projects</a></li>      <!-- stays -->
+  <li><a href="#education">Education</a></li>    <!-- moved down -->
+  <li><a href="#contact">Contact</a></li>
+</ul>
+
   </div>
 </nav>
   
@@ -67,6 +68,135 @@
       Learning is a lifelong journey. My family of graduates inspires me to grow continuously and give back. I aim to build user-centered digital solutions that align business strategy with real user needs.
     </p>
   </section>
+
+  <section id="skills">
+  <h2 class="gradient-header">Skills & Expertise</h2>
+  <p class="skills-intro">
+    A comprehensive skill set spanning product management, agile methodologies, business analysis, and technical implementation
+  </p>
+
+  <div class="skills-grid">
+    <div class="skill-group">
+      <div class="skill-title">
+        <img src="icons/target.svg" alt="Product Management Icon" class="skill-icon" />
+        <h3>Product Management</h3>
+      </div>
+      <ul>
+        <li>Product Strategy & Roadmapping</li>
+        <li>User Story Writing & Backlog Management</li>
+        <li>Market Research & Competitive Analysis</li>
+        <li>Product Lifecycle Management</li>
+        <li>Go-to-Market Strategy</li>
+      </ul>
+    </div>
+
+    <div class="skill-group">
+      <div class="skill-title">
+        <img src="icons/refresh-cw.svg" alt="Agile Icon" class="skill-icon" />
+        <h3>Agile & Scrum</h3>
+      </div>
+      <ul>
+        <li>Scrum Master Certification</li>
+        <li>Sprint Planning & Retrospectives</li>
+        <li>Cross-functional Team Leadership</li>
+        <li>Agile Coaching & Mentoring</li>
+        <li>Kanban & Lean Methodologies</li>
+      </ul>
+    </div>
+
+    <div class="skill-group">
+      <div class="skill-title">
+        <img src="icons/bar-chart-2.svg" alt="Business Analysis Icon" class="skill-icon" />
+        <h3>Business Analysis</h3>
+      </div>
+      <ul>
+        <li>Requirements Gathering & Analysis</li>
+        <li>Process Mapping & Optimization</li>
+        <li>Stakeholder Management</li>
+        <li>Business Case Development</li>
+        <li>Risk Assessment & Mitigation</li>
+      </ul>
+    </div>
+
+    <div class="skill-group">
+      <div class="skill-title">
+        <img src="icons/code.svg" alt="Technical Skills Icon" class="skill-icon" />
+        <h3>Technical Skills</h3>
+      </div>
+      <ul>
+        <li>SQL & Data Analysis</li>
+        <li>API Documentation & Testing</li>
+        <li>Wireframing & Prototyping</li>
+        <li>JIRA & Confluence</li>
+        <li>Analytics & KPI Tracking</li>
+      </ul>
+    </div>
+  </div>
+</section>
+
+<section id="certifications">
+    <h2 class="gradient-header">Certifications</h2>
+  <div class="cert-grid">
+
+    <div class="cert-card">
+      <img src="icons/linkedin.png" alt="Generative AI Icon" />
+      <div>
+        <h3>Generative AI for Product Managers</h3>
+        <p><strong>Issuing Authority:</strong> LinkedIn Learning</p>
+        <p><strong>Credential:</strong> 
+          <a href="https://www.linkedin.com/learning/certificates/a41f8e4e6745809068443816da56340b0664a50913b7bef5d57fae84e3cbf579" target="_blank">
+            View Certificate
+          </a>
+        </p>
+        <p><strong>Key Skills:</strong> AI Product Strategy, Prompt Engineering, AI Lifecycle Integration</p>
+      </div>
+    </div>
+
+    <div class="cert-card">
+      <img src="icons/pmp.png" alt="PMP Icon" />
+      <div>
+        <h3>Project Management Professional (PMP)</h3>
+        <p><strong>Issuing Authority:</strong> Project Management Institute</p>
+        <p><strong>Credential:</strong> 
+          <a href="https://www.credly.com/badges/3da7167f-83af-48a6-816a-23cb2e97bf69" target="_blank">
+            View Badge
+          </a>
+        </p>
+        <p><strong>Key Skills:</strong> Project Planning, Risk Management, Stakeholder Communication, Budgeting</p>
+      </div>
+    </div>
+
+    <div class="cert-card">
+      <img src="icons/linkedin.png" alt="Atlassian Agile Project Management Icon" />
+      <div>
+        <h3>Atlassian Agile Project Management Certificate</h3>
+        <p><strong>Issuing Authority:</strong> Atlassian</p>
+        <p><strong>Credential:</strong> 
+          <a href="https://www.linkedin.com/learning/certificates/5d127e3c541d0806e7728f64dadc958a3788590707273c9e0b6e5d698d7ebf3c" target="_blank">
+            View Certificate
+          </a>
+        </p>
+        <p><strong>Key Skills:</strong> Scrum, Kanban, Agile Frameworks, Team Collaboration, Jira</p>
+      </div>
+    </div>
+
+    <div class="cert-card">
+      <img src="icons/pspo.png" alt="PSPO I Badge" />
+      <div>
+        <h3>Professional Scrum Product Owner™ I (PSPO I)</h3>
+        <p><strong>Issuing Authority:</strong> Scrum.org</p>
+        <p><strong>Credential:</strong> 
+          <a href="https://www.credly.com/badges/49ba24bb-d48a-4b16-96a5-a88285b1510f/linked_in_profile" target="_blank">
+            View Badge
+          </a>
+        </p>
+        <p><strong>Key Skills:</strong> Product Ownership, Agile Requirements, Value Maximization, Scrum Framework</p>
+      </div>
+    </div>
+
+  </div>
+  </section>
+
 
   <!-- ✅ Experience Section Updated Here -->
   <section id="experience">
@@ -171,134 +301,7 @@
     </div>
   </section>
 
-  <section id="certifications">
-    <h2 class="gradient-header">Certifications</h2>
-  <div class="cert-grid">
-
-    <div class="cert-card">
-      <img src="icons/linkedin.png" alt="Generative AI Icon" />
-      <div>
-        <h3>Generative AI for Product Managers</h3>
-        <p><strong>Issuing Authority:</strong> LinkedIn Learning</p>
-        <p><strong>Credential:</strong> 
-          <a href="https://www.linkedin.com/learning/certificates/a41f8e4e6745809068443816da56340b0664a50913b7bef5d57fae84e3cbf579" target="_blank">
-            View Certificate
-          </a>
-        </p>
-        <p><strong>Key Skills:</strong> AI Product Strategy, Prompt Engineering, AI Lifecycle Integration</p>
-      </div>
-    </div>
-
-    <div class="cert-card">
-      <img src="icons/pmp.png" alt="PMP Icon" />
-      <div>
-        <h3>Project Management Professional (PMP)</h3>
-        <p><strong>Issuing Authority:</strong> Project Management Institute</p>
-        <p><strong>Credential:</strong> 
-          <a href="https://www.credly.com/badges/3da7167f-83af-48a6-816a-23cb2e97bf69" target="_blank">
-            View Badge
-          </a>
-        </p>
-        <p><strong>Key Skills:</strong> Project Planning, Risk Management, Stakeholder Communication, Budgeting</p>
-      </div>
-    </div>
-
-    <div class="cert-card">
-      <img src="icons/linkedin.png" alt="Atlassian Agile Project Management Icon" />
-      <div>
-        <h3>Atlassian Agile Project Management Certificate</h3>
-        <p><strong>Issuing Authority:</strong> Atlassian</p>
-        <p><strong>Credential:</strong> 
-          <a href="https://www.linkedin.com/learning/certificates/5d127e3c541d0806e7728f64dadc958a3788590707273c9e0b6e5d698d7ebf3c" target="_blank">
-            View Certificate
-          </a>
-        </p>
-        <p><strong>Key Skills:</strong> Scrum, Kanban, Agile Frameworks, Team Collaboration, Jira</p>
-      </div>
-    </div>
-
-    <div class="cert-card">
-      <img src="icons/pspo.png" alt="PSPO I Badge" />
-      <div>
-        <h3>Professional Scrum Product Owner™ I (PSPO I)</h3>
-        <p><strong>Issuing Authority:</strong> Scrum.org</p>
-        <p><strong>Credential:</strong> 
-          <a href="https://www.credly.com/badges/49ba24bb-d48a-4b16-96a5-a88285b1510f/linked_in_profile" target="_blank">
-            View Badge
-          </a>
-        </p>
-        <p><strong>Key Skills:</strong> Product Ownership, Agile Requirements, Value Maximization, Scrum Framework</p>
-      </div>
-    </div>
-
-  </div>
-  </section>
-
-  <section id="skills">
-  <h2 class="gradient-header">Skills & Expertise</h2>
-  <p class="skills-intro">
-    A comprehensive skill set spanning product management, agile methodologies, business analysis, and technical implementation
-  </p>
-
-  <div class="skills-grid">
-    <div class="skill-group">
-      <div class="skill-title">
-        <img src="icons/target.svg" alt="Product Management Icon" class="skill-icon" />
-        <h3>Product Management</h3>
-      </div>
-      <ul>
-        <li>Product Strategy & Roadmapping</li>
-        <li>User Story Writing & Backlog Management</li>
-        <li>Market Research & Competitive Analysis</li>
-        <li>Product Lifecycle Management</li>
-        <li>Go-to-Market Strategy</li>
-      </ul>
-    </div>
-
-    <div class="skill-group">
-      <div class="skill-title">
-        <img src="icons/refresh-cw.svg" alt="Agile Icon" class="skill-icon" />
-        <h3>Agile & Scrum</h3>
-      </div>
-      <ul>
-        <li>Scrum Master Certification</li>
-        <li>Sprint Planning & Retrospectives</li>
-        <li>Cross-functional Team Leadership</li>
-        <li>Agile Coaching & Mentoring</li>
-        <li>Kanban & Lean Methodologies</li>
-      </ul>
-    </div>
-
-    <div class="skill-group">
-      <div class="skill-title">
-        <img src="icons/bar-chart-2.svg" alt="Business Analysis Icon" class="skill-icon" />
-        <h3>Business Analysis</h3>
-      </div>
-      <ul>
-        <li>Requirements Gathering & Analysis</li>
-        <li>Process Mapping & Optimization</li>
-        <li>Stakeholder Management</li>
-        <li>Business Case Development</li>
-        <li>Risk Assessment & Mitigation</li>
-      </ul>
-    </div>
-
-    <div class="skill-group">
-      <div class="skill-title">
-        <img src="icons/code.svg" alt="Technical Skills Icon" class="skill-icon" />
-        <h3>Technical Skills</h3>
-      </div>
-      <ul>
-        <li>SQL & Data Analysis</li>
-        <li>API Documentation & Testing</li>
-        <li>Wireframing & Prototyping</li>
-        <li>JIRA & Confluence</li>
-        <li>Analytics & KPI Tracking</li>
-      </ul>
-    </div>
-  </div>
-</section>
-
+  
 <section id="projects">
   <h2 class="gradient-header">Projects</h2>
 
@@ -330,6 +333,20 @@
     </div>
   </div>
 </section>
+
+<section id="education">
+    <h2 class="gradient-header">Education</h2>
+    <div class="experience-grid">
+      <div class="experience-card">
+        <h3>University of North Texas <span>2021 – 2023</span></h3>
+        <h4>Master of Science – Computer Engineering</h4>
+      </div>
+      <div class="experience-card">
+        <h3>Gandhi Institute of Technology <span>2013 – 2017</span></h3>
+        <h4>Bachelor of Technology – Electronics & Communication Engineering</h4>
+      </div>
+    </div>
+  </section>
 
   <section id="contact">
     <h2 class="gradient-header">Contact Me</h2>
