--- a/index.html
+++ b/index.html
@@ -291,18 +291,18 @@
   <h2 class="gradient-header">Projects</h2>
 
   <div class="skills-grid">
-    <div class="skill-group project-card">
-      <img src="icons/Transit_App.png" alt="Transit App" class="project-image" />
+    <div class="skill-group project-card" style="padding: 24px; border-radius: 12px; background-color: #1e1e1e;">
+      <img src="icons/Transit_App.png" alt="Transit App" style="width: 80px; height: 80px; object-fit: cover; border-radius: 0.5rem; margin-bottom: 1rem; display: block; margin-left: auto; margin-right: auto;" />
 
-      <h3 class="project-title">
+      <h3 style="text-align: center; font-size: 1.1rem; color: #ffffff; margin-bottom: 0.5rem;">
         Transit Product Improvement Case Study
       </h3>
 
-      <p class="project-description">
+      <p style="text-align: center; font-size: 0.9rem; color: #cccccc; margin-bottom: 1rem;">
         A UX-focused case study improving the transit experience through research, flow redesign, and stakeholder insights.
       </p>
 
-      <div class="project-tags">
+      <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 8px; margin-bottom: 1rem;">
         <span class="tag">Figma</span>
         <span class="tag">User Research</span>
         <span class="tag">Journey Mapping</span>
@@ -310,7 +310,7 @@
         <span class="tag">Product Thinking</span>
       </div>
 
-      <div class="project-link">
+      <div style="text-align: center;">
         <a href="https://github.com/praneethk6795/Transit_Product_Improvement_Case_Study" target="_blank" class="btn primary-btn">
           View Project
         </a>
