adding mock projects

--- a/index.html
+++ b/index.html
@@ -291,18 +291,17 @@
   <h2 class="gradient-header">Projects</h2>
 
   <div class="skills-grid">
-    <div class="skill-group project-card" style="padding: 24px; border-radius: 12px; background-color: #1e1e1e;">
-      <img src="icons/Transit_App.png" alt="Transit App" style="width: 80px; height: 80px; object-fit: cover; border-radius: 0.5rem; margin-bottom: 1rem; display: block; margin-left: auto; margin-right: auto;" />
+    <!-- Project 1 -->
+    <div class="skill-group project-card">
+      <img src="icons/Transit_App.png" alt="Transit App" class="project-image" />
 
-      <h3 style="text-align: center; font-size: 1.1rem; color: #ffffff; margin-bottom: 0.5rem;">
-        Transit Product Improvement Case Study
-      </h3>
+      <h3 class="project-title">Transit Product Improvement Case Study</h3>
 
-      <p style="text-align: center; font-size: 0.9rem; color: #cccccc; margin-bottom: 1rem;">
+      <p class="project-description">
         A UX-focused case study improving the transit experience through research, flow redesign, and stakeholder insights.
       </p>
 
-      <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 8px; margin-bottom: 1rem;">
+      <div class="project-tags">
         <span class="tag">Figma</span>
         <span class="tag">User Research</span>
         <span class="tag">Journey Mapping</span>
@@ -310,8 +309,56 @@
         <span class="tag">Product Thinking</span>
       </div>
 
-      <div style="text-align: center;">
+      <div class="project-link">
         <a href="https://github.com/praneethk6795/Transit_Product_Improvement_Case_Study" target="_blank" class="btn primary-btn">
+          View Project
+        </a>
+      </div>
+    </div>
+
+    <!-- Project 2 (Mock) -->
+    <div class="skill-group project-card">
+      <img src="icons/mock_project1.png" alt="Mock Project 1" class="project-image" />
+
+      <h3 class="project-title">Healthcare Portal Redesign</h3>
+
+      <p class="project-description">
+        Streamlined patient interaction by redesigning user flow, optimizing key screens, and introducing accessibility improvements.
+      </p>
+
+      <div class="project-tags">
+        <span class="tag">Figma</span>
+        <span class="tag">UX Research</span>
+        <span class="tag">Accessibility</span>
+        <span class="tag">UI Design</span>
+      </div>
+
+      <div class="project-link">
+        <a href="#" target="_blank" class="btn primary-btn">
+          View Project
+        </a>
+      </div>
+    </div>
+
+    <!-- Project 3 (Mock) -->
+    <div class="skill-group project-card">
+      <img src="icons/mock_project2.png" alt="Mock Project 2" class="project-image" />
+
+      <h3 class="project-title">E-Commerce Checkout Optimization</h3>
+
+      <p class="project-description">
+        Conducted heuristic evaluation and redesigned the multi-step checkout process to improve conversions and reduce drop-off rates.
+      </p>
+
+      <div class="project-tags">
+        <span class="tag">User Testing</span>
+        <span class="tag">Conversion Rate</span>
+        <span class="tag">Figma</span>
+        <span class="tag">Product Strategy</span>
+      </div>
+
+      <div class="project-link">
+        <a href="#" target="_blank" class="btn primary-btn">
           View Project
         </a>
       </div>
