--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
   <div class="skills-grid">
     <!-- Project 1 -->
     <div class="skill-group project-card">
-      <img src="icons/Transit_App.png" alt="Transit App" class="project-image" />
+      <img src="icons/Transit_App.jpg" alt="Transit App" class="project-image" />
 
       <h3 class="project-title">Transit Product Improvement Case Study</h3>
 
