--- a/index.html
+++ b/index.html
@@ -293,28 +293,37 @@
   <div class="skills-grid">
     <!-- Project 1 -->
     <div class="skill-group project-card">
-      <img src="icons/Transit_App.jpg" alt="Transit App" class="project-image" />
+  <img src="icons/Transit_App.png" alt="Transit App" class="project-image" />
 
-      <h3 class="project-title">Transit Product Improvement Case Study</h3>
+  <h3 class="project-title">
+    Transit – UX Redesign & Real-Time Accuracy Case Study
+  </h3>
 
-      <p class="project-description">
-        A UX-focused case study improving the transit experience through research, flow redesign, and stakeholder insights.
-      </p>
+  <p class="project-description">
+    A user-centered redesign of the Transit app to improve real-time accuracy, simplify UX, and enhance multi-modal trip planning for daily and occasional commuters.
+  </p>
 
-      <div class="project-tags">
-        <span class="tag">Figma</span>
-        <span class="tag">User Research</span>
-        <span class="tag">Journey Mapping</span>
-        <span class="tag">UX/UI</span>
-        <span class="tag">Product Thinking</span>
-      </div>
+  <div class="project-tags">
+    <span class="tag">Figma</span>
+    <span class="tag">User Research</span>
+    <span class="tag">Journey Mapping</span>
+    <span class="tag">UX/UI Design</span>
+    <span class="tag">Product Thinking</span>
+  </div>
 
-      <div class="project-link">
-        <a href="https://github.com/praneethk6795/Transit_Product_Improvement_Case_Study" target="_blank" class="btn primary-btn">
-          View Project
-        </a>
-      </div>
-    </div>
+  <!-- Key Metrics Section -->
+  <div class="project-metrics">
+    <div class="metric"><strong>+40%</strong> Real-Time Accuracy</div>
+    <div class="metric"><strong>–30%</strong> UX Frustration</div>
+    <div class="metric"><strong>+50%</strong> Discoverability</div>
+  </div>
+
+  <div class="project-link">
+    <a href="https://github.com/praneethk6795/Transit_Product_Improvement_Case_Study" target="_blank" class="btn primary-btn">
+      View Project
+    </a>
+  </div>
+</div>
 
     <!-- Project 2 (Mock) -->
     <div class="skill-group project-card">
