--- a/index.html
+++ b/index.html
@@ -304,19 +304,28 @@
     A user-centered redesign of the Transit app to improve real-time accuracy, simplify UX, and enhance multi-modal trip planning for daily and occasional commuters.
   </p>
 
+  <!-- Visual Metrics -->
+  <div class="project-metrics">
+    <div class="metric">
+      <span>Real-Time Accuracy</span>
+      <div class="progress-bar"><div class="fill" style="width: 40%"></div></div>
+    </div>
+    <div class="metric">
+      <span>UX Frustration Reduction</span>
+      <div class="progress-bar"><div class="fill" style="width: 30%"></div></div>
+    </div>
+    <div class="metric">
+      <span>Feature Discoverability</span>
+      <div class="progress-bar"><div class="fill" style="width: 50%"></div></div>
+    </div>
+  </div>
+
+  <!-- Skills below metrics -->
   <div class="project-tags">
-    <span class="tag">Figma</span>
     <span class="tag">User Research</span>
     <span class="tag">Journey Mapping</span>
     <span class="tag">UX/UI Design</span>
     <span class="tag">Product Thinking</span>
-  </div>
-
-  <!-- Key Metrics Section -->
-  <div class="project-metrics">
-    <div class="metric"><strong>+40%</strong> Real-Time Accuracy</div>
-    <div class="metric"><strong>–30%</strong> UX Frustration</div>
-    <div class="metric"><strong>+50%</strong> Discoverability</div>
   </div>
 
   <div class="project-link">
