--- a/index.html
+++ b/index.html
@@ -295,7 +295,6 @@
     <div class="skill-group project-card">
   <img src="icons/Transit_App.jpg" alt="Transit App" class="project-image" />
 
-
   <h3 class="project-title">
     Transit – UX Redesign & Real-Time Accuracy Case Study
   </h3>
@@ -304,19 +303,27 @@
     A user-centered redesign of the Transit app to improve real-time accuracy, simplify UX, and enhance multi-modal trip planning for daily and occasional commuters.
   </p>
 
-  <!-- Visual Metrics -->
-  <div class="project-metrics">
-    <div class="metric">
-      <span>Real-Time Accuracy</span>
-      <div class="progress-bar"><div class="fill" style="width: 40%"></div></div>
+  <!-- NEW Circular Visual Metrics -->
+  <div class="kpi-container">
+    <div class="kpi">
+      <div class="kpi-ring" style="--percentage: 40">
+        <div class="kpi-number">+40%</div>
+      </div>
+      <div class="kpi-label">Real-Time Accuracy</div>
     </div>
-    <div class="metric">
-      <span>UX Frustration Reduction</span>
-      <div class="progress-bar"><div class="fill" style="width: 30%"></div></div>
+
+    <div class="kpi">
+      <div class="kpi-ring" style="--percentage: 30">
+        <div class="kpi-number">–30%</div>
+      </div>
+      <div class="kpi-label">UX Frustration</div>
     </div>
-    <div class="metric">
-      <span>Feature Discoverability</span>
-      <div class="progress-bar"><div class="fill" style="width: 50%"></div></div>
+
+    <div class="kpi">
+      <div class="kpi-ring" style="--percentage: 50">
+        <div class="kpi-number">+50%</div>
+      </div>
+      <div class="kpi-label">Discoverability</div>
     </div>
   </div>
 
