mock projects updates

--- a/index.html
+++ b/index.html
@@ -342,53 +342,108 @@
   </div>
 </div>
 
-    <!-- Project 2 (Mock) -->
-    <div class="skill-group project-card">
-      <img src="icons/mock_project1.png" alt="Mock Project 1" class="project-image" />
+    <!-- MOCK PROJECT 1 -->
+<div class="skill-group project-card">
+  <img src="icons/mock_project_1.jpg" alt="Mock Project 1" class="project-image" />
 
-      <h3 class="project-title">Healthcare Portal Redesign</h3>
+  <h3 class="project-title">
+    Smart Budgeting – Expense Tracker Redesign Case Study
+  </h3>
 
-      <p class="project-description">
-        Streamlined patient interaction by redesigning user flow, optimizing key screens, and introducing accessibility improvements.
-      </p>
+  <p class="project-description">
+    Redesigned a personal finance tool to help users track expenses, gain insight into spending habits, and receive smart savings tips using predictive UX.
+  </p>
 
-      <div class="project-tags">
-        <span class="tag">Figma</span>
-        <span class="tag">UX Research</span>
-        <span class="tag">Accessibility</span>
-        <span class="tag">UI Design</span>
+  <!-- Visual Metrics -->
+  <div class="kpi-container">
+    <div class="kpi">
+      <div class="kpi-ring" style="--percentage: 45">
+        <div class="kpi-number">+45%</div>
       </div>
-
-      <div class="project-link">
-        <a href="#" target="_blank" class="btn primary-btn">
-          View Project
-        </a>
-      </div>
+      <div class="kpi-label">Insight Accuracy</div>
     </div>
 
-    <!-- Project 3 (Mock) -->
-    <div class="skill-group project-card">
-      <img src="icons/mock_project2.png" alt="Mock Project 2" class="project-image" />
-
-      <h3 class="project-title">E-Commerce Checkout Optimization</h3>
-
-      <p class="project-description">
-        Conducted heuristic evaluation and redesigned the multi-step checkout process to improve conversions and reduce drop-off rates.
-      </p>
-
-      <div class="project-tags">
-        <span class="tag">User Testing</span>
-        <span class="tag">Conversion Rate</span>
-        <span class="tag">Figma</span>
-        <span class="tag">Product Strategy</span>
+    <div class="kpi">
+      <div class="kpi-ring" style="--percentage: 35">
+        <div class="kpi-number">–35%</div>
       </div>
-
-      <div class="project-link">
-        <a href="#" target="_blank" class="btn primary-btn">
-          View Project
-        </a>
-      </div>
+      <div class="kpi-label">Manual Entry</div>
     </div>
+
+    <div class="kpi">
+      <div class="kpi-ring" style="--percentage: 50">
+        <div class="kpi-number">+50%</div>
+      </div>
+      <div class="kpi-label">Savings Engagement</div>
+    </div>
+  </div>
+
+  <!-- Key Skills -->
+  <div class="project-tags">
+    <span class="tag">UX Research</span>
+    <span class="tag">Wireframing</span>
+    <span class="tag">Design Systems</span>
+    <span class="tag">Product Strategy</span>
+  </div>
+
+  <div class="project-link">
+    <a href="#" target="_blank" class="btn primary-btn">
+      View Project
+    </a>
+  </div>
+</div>
+
+<!-- MOCK PROJECT 2 -->
+<div class="skill-group project-card">
+  <img src="icons/mock_project_2.jpg" alt="Mock Project 2" class="project-image" />
+
+  <h3 class="project-title">
+    HealthSync – Patient Portal Redesign Initiative
+  </h3>
+
+  <p class="project-description">
+    A holistic UX redesign of a healthcare portal to enhance accessibility, streamline appointment flows, and boost patient engagement through intuitive design.
+  </p>
+
+  <!-- Visual Metrics -->
+  <div class="kpi-container">
+    <div class="kpi">
+      <div class="kpi-ring" style="--percentage: 30">
+        <div class="kpi-number">–30%</div>
+      </div>
+      <div class="kpi-label">Missed Appointments</div>
+    </div>
+
+    <div class="kpi">
+      <div class="kpi-ring" style="--percentage: 25">
+        <div class="kpi-number">+25%</div>
+      </div>
+      <div class="kpi-label">Portal Engagement</div>
+    </div>
+
+    <div class="kpi">
+      <div class="kpi-ring" style="--percentage: 40">
+        <div class="kpi-number">+40%</div>
+      </div>
+      <div class="kpi-label">Mobile Usability</div>
+    </div>
+  </div>
+
+  <!-- Key Skills -->
+  <div class="project-tags">
+    <span class="tag">Accessibility</span>
+    <span class="tag">User Interviews</span>
+    <span class="tag">UI Systems</span>
+    <span class="tag">Healthcare UX</span>
+  </div>
+
+  <div class="project-link">
+    <a href="#" target="_blank" class="btn primary-btn">
+      View Project
+    </a>
+  </div>
+</div>
+
   </div>
 </section>
 
