--- a/index.html
+++ b/index.html
@@ -194,6 +194,21 @@
       </div>
     </div>
 
+    <div class="cert-card">
+  <img src="icons/hipaa.png" alt="HIPAA Certification Icon" />
+  <div>
+    <h3>HIPAA for Business Associates</h3>
+    <p><strong>Issuing Authority:</strong> HIPAA Exams</p>
+    <p><strong>Credential:</strong> 
+      <a href="files/hipaa.pdf" target="_blank" rel="noopener noreferrer">
+        View Certificate
+      </a>
+    </p>
+    <p><strong>Key Skills:</strong> HIPAA Compliance, Data Privacy, Security Rule</p>
+  </div>
+</div>
+
+
   </div>
   </section>
 
