--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
   <img src="icons/hipaa.png" alt="HIPAA Certification Icon" />
   <div>
     <h3>HIPAA for Business Associates</h3>
-    <p><strong>Issuing Authority:</strong> HIPAA Exams</p>
+    <p><strong>Issuing Authority:</strong> HIPAA+Exams</p>
     <p><strong>Credential:</strong> 
       <a href="files/hipaa.pdf" target="_blank" rel="noopener noreferrer">
         View Certificate
