jpg hipaa code change

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     </div>
 
     <div class="cert-card">
-  <img src="icons/hipaa.svg" alt="HIPAA Certification Icon" />
+  <img src="icons/hipaa.jpg" alt="HIPAA Certification Icon" />
   <div>
     <h3>HIPAA for Business Associates</h3>
     <p><strong>Issuing Authority:</strong> HIPAA+Exams</p>
